clusters/k8s-robbinsdale/apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:latest # Docker image for code-server
          ports:
            - containerPort: 8443 # Port inside the container (code-server default is 8443)
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8443
          #   periodSeconds: 10
          volumeMounts:
            - name: startup-script
              mountPath: /custom-cont-init.d
            - name: nfs-proxmox-vault
              mountPath: /mnt/proxmox-vault
            - name: config-volume
              mountPath: /config
            - name: ceph-hybrid-fs
              mountPath: /mnt/ceph
      volumes:
        - name: startup-script
          configMap:
            name: startup-script
            defaultMode: 0755 # Set the permissions for the files in the ConfigMap
        - name: nfs-proxmox-vault
          nfs:
            path: /vault/k8s
            server: 192.168.50.104
        - name: ceph-hybrid-fs
          nfs:
            path: /ceph
            server: 10.43.143.159
        - name: config-volume
          persistentVolumeClaim:
            claimName: code-server-config
      restartPolicy: Always # Restart policy for the pod
