clusters/k8s-robbinsdale/apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  annotations:
    external-dns.alpha.kubernetes.io/hostname: code-server.lukehouge.com
spec:
  selector:
    app: code-server  # Match labels with your Deployment
  ports:
    - name: https
      protocol: TCP
      port: 443  # Port exposed by the service
      targetPort: 8443  # Port on the pods (matches containerPort in Deployment)
  type: LoadBalancer
